mobile adaptation + responces

--- a/scss/layout/_general.scss
+++ b/scss/layout/_general.scss
@@ -34,6 +34,7 @@ body, html {
 
 body {
 	background: rgb(255,255,255);
+	position: relative;
   background: linear-gradient(87deg, rgba(255,255,255,1) 0%, rgba(247,251,255,1) 42%, rgba(242,248,255,1) 66%, rgba(239,247,255,1) 80%, rgba(233,244,255,1) 100%);
 }
 
