--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,3 +11,6 @@
 @import "modules/_currency";
 @import "modules/_form";
 @import "modules/_transaction";
+@import "modules/_footer";
+@import "modules/_responses";
+@import "modules/_burger.scss"
