--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ body, html {
 
 body {
   background: white;
+  position: relative;
   background: linear-gradient(87deg, white 0%, #f7fbff 42%, #f2f8ff 66%, #eff7ff 80%, #e9f4ff 100%);
 }
 
@@ -54,23 +55,21 @@ header {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 30px 70px;
+  height: 150px;
 }
 
-.nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media (max-width: 1350px) {
+  header {
+    padding: 30px 40px;
+  }
 }
 
-.nav__link {
-  margin-right: 20px;
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-.nav__link:hover {
-  color: #1C6FA6;
-  border-bottom: 1px solid #1C6FA6;
+@media (max-width: 1080px) {
+  header {
+    padding: 30px 20px;
+    height: 100px;
+    font-size: 14px;
+  }
 }
 
 .logo {
@@ -80,6 +79,17 @@ header {
   width: 120px;
   -webkit-transition: .3s;
   transition: .3s;
+  position: absolute;
+  left: calc(50% - 60px);
+  top: 12px;
+}
+
+@media (max-width: 1080px) {
+  .logo {
+    width: 90px;
+    left: calc(50% - 45px);
+    top: 4px;
+  }
 }
 
 .contacts {
@@ -90,6 +100,18 @@ header {
 
 .contacts__item {
   margin-right: 20px;
+}
+
+@media (max-width: 500px) {
+  .contacts__item {
+    margin-right: 5px;
+  }
+}
+
+@media (max-width: 730px) {
+  .contacts__item-chat {
+    visibility: hidden;
+  }
 }
 
 .contacts__link {
@@ -127,6 +149,18 @@ header {
   color: #525252;
 }
 
+@media (max-width: 1080px) {
+  .currency-line__text {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 700px) {
+  .currency-line__text {
+    margin: 10px 9px;
+  }
+}
+
 .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -136,11 +170,55 @@ header {
           justify-content: space-between;
 }
 
+@media (max-width: 980px) {
+  .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .currency {
   width: 450px;
   padding: 30px 0 0 100px;
   -webkit-box-shadow: 0px 0px 10px #1C6FA6;
           box-shadow: 0px 0px 10px #1C6FA6;
+}
+
+@media (max-width: 1730px) {
+  .currency {
+    padding: 20px 0 0 20px;
+    width: 350px;
+  }
+}
+
+@media (max-width: 1080px) {
+  .currency {
+    padding: 20px 0 0 20px;
+    width: 350px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 980px) {
+  .currency {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    padding: 20px;
+  }
 }
 
 .currency__title {
@@ -161,9 +239,21 @@ header {
   margin-bottom: 10px;
 }
 
+@media (max-width: 980px) {
+  .currency__item {
+    margin-right: 30px;
+  }
+}
+
 .currency__icon {
   margin-right: 10px;
   width: 30px;
+}
+
+@media (max-width: 980px) {
+  .currency__icon {
+    width: 20px;
+  }
 }
 
 .currency__code {
@@ -234,6 +324,12 @@ select::-ms-expand {
   border: 1px solid #1C6FA6;
 }
 
+@media (max-width: 450px) {
+  .select {
+    width: calc(50% - 18px);
+  }
+}
+
 .select::after {
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
@@ -252,7 +348,21 @@ select::-ms-expand {
 
 .form {
   margin-top: 50px;
-  width: 800px;
+  width: 780px;
+  padding: 20px;
+  font-size: 18px;
+}
+
+@media (max-width: 1080px) {
+  .form {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 800px) {
+  .form {
+    width: 100%;
+  }
 }
 
 .form__convert {
@@ -267,6 +377,13 @@ select::-ms-expand {
 .form__equel {
   margin: 0 20px;
   font-size: 22px;
+}
+
+@media (max-width: 450px) {
+  .form__equel {
+    font-size: 16px;
+    margin: 0 10px;
+  }
 }
 
 .form__card {
@@ -284,13 +401,11 @@ select::-ms-expand {
   margin-right: 30px;
 }
 
-.form__card-input {
-  width: 100%;
-  padding: 0 20px;
-  border-radius: 10px;
-  border: 1px solid #1C6FA6;
-  height: 40px;
-  font-size: 20px;
+@media (max-width: 980px) {
+  .form__card-icon {
+    width: 28px;
+    margin-right: 15px;
+  }
 }
 
 .form__card-input {
@@ -300,6 +415,12 @@ select::-ms-expand {
   border: 1px solid #1C6FA6;
   height: 40px;
   font-size: 20px;
+}
+
+@media (max-width: 980px) {
+  .form__card-input {
+    font-size: 14px;
+  }
 }
 
 .form__email {
@@ -317,6 +438,13 @@ select::-ms-expand {
   margin-right: 30px;
 }
 
+@media (max-width: 980px) {
+  .form__email-icon {
+    width: 30px;
+    margin-right: 15px;
+  }
+}
+
 .form__email-input {
   width: 100%;
   padding: 0 20px;
@@ -324,6 +452,12 @@ select::-ms-expand {
   border: 1px solid #1C6FA6;
   height: 40px;
   font-size: 20px;
+}
+
+@media (max-width: 980px) {
+  .form__email-input {
+    font-size: 14px;
+  }
 }
 
 .form__send {
@@ -341,13 +475,36 @@ select::-ms-expand {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-transition: .3s;
+  transition: .3s;
   background: #7751a3;
   background: linear-gradient(87deg, #7751a3 0%, #6188eb 69%);
+}
+
+@media (max-width: 980px) {
+  .form__send {
+    font-size: 18px;
+    padding: 8px 30px 8px 6px;
+    height: 40px;
+    margin-left: 10px;
+  }
+}
+
+.form__send:hover {
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
 }
 
 .form__send-img {
   width: 15px;
   margin-right: 8px;
+}
+
+@media (max-width: 980px) {
+  .form__send-img {
+    width: 13px;
+    margin-left: 5px;
+  }
 }
 
 .form__money {
@@ -370,6 +527,12 @@ select::-ms-expand {
   font-size: 20px;
 }
 
+@media (max-width: 980px) {
+  .form__money-input {
+    font-size: 14px;
+  }
+}
+
 .form__caution {
   border: 1px solid orange;
   padding: 15px;
@@ -383,7 +546,6 @@ select::-ms-expand {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 18px;
   margin-top: 30px;
   line-height: 1.5;
 }
@@ -391,6 +553,12 @@ select::-ms-expand {
 .form__caution-img, .form__message-img, .form__wait-img, .form__info-img {
   width: 40px;
   margin-right: 20px;
+}
+
+@media (max-width: 1080px) {
+  .form__caution-img, .form__message-img, .form__wait-img, .form__info-img {
+    width: 25px;
+  }
 }
 
 .transaction {
@@ -426,6 +594,12 @@ select::-ms-expand {
   text-align: center;
 }
 
+@media (max-width: 650px) {
+  .transaction__title {
+    font-size: 24px;
+  }
+}
+
 .transaction__info-sell {
   position: absolute;
   display: -webkit-box;
@@ -435,6 +609,36 @@ select::-ms-expand {
       -ms-flex-align: center;
           align-items: center;
   left: 35%;
+}
+
+@media (max-width: 1500px) {
+  .transaction__info-sell {
+    left: 42.5%;
+  }
+}
+
+@media (max-width: 1270px) {
+  .transaction__info-sell {
+    left: 50%;
+  }
+}
+
+@media (max-width: 980px) {
+  .transaction__info-sell {
+    left: 35%;
+  }
+}
+
+@media (max-width: 650px) {
+  .transaction__info-sell {
+    left: 42.5%;
+  }
+}
+
+@media (max-width: 550px) {
+  .transaction__info-sell {
+    left: 55%;
+  }
 }
 
 .transaction__info-buy {
@@ -457,14 +661,64 @@ select::-ms-expand {
   margin-right: 20px;
 }
 
+@media (max-width: 700px) {
+  .transaction__text {
+    margin-right: 10px;
+  }
+}
+
 .transaction__date {
   position: absolute;
   left: 70%;
 }
 
+@media (max-width: 1500px) {
+  .transaction__date {
+    left: 85%;
+  }
+}
+
+@media (max-width: 1270px) {
+  .transaction__date {
+    display: none;
+  }
+}
+
+@media (max-width: 980px) {
+  .transaction__date {
+    left: 70%;
+    display: block;
+  }
+}
+
+@media (max-width: 650px) {
+  .transaction__date {
+    display: none;
+  }
+}
+
 .transaction__state {
   position: absolute;
   left: 85%;
+}
+
+@media (max-width: 1500px) {
+  .transaction__state {
+    display: none;
+  }
+}
+
+@media (max-width: 980px) {
+  .transaction__state {
+    left: 85%;
+    display: block;
+  }
+}
+
+@media (max-width: 550px) {
+  .transaction__state {
+    display: none;
+  }
 }
 
 .transaction__state--done {
@@ -477,4 +731,290 @@ select::-ms-expand {
 
 .transaction__state--pending {
   color: orange;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 50px 0;
+  position: relative;
+  background-color: #f2f2f2;
+  margin-top: 50px;
+  width: 100%;
+}
+
+@media (max-width: 980px) {
+  .footer {
+    padding: 20px 0;
+  }
+}
+
+.chat {
+  position: absolute;
+  width: 60px;
+  right: 5%;
+  top: calc(50% - 30px);
+  -webkit-transition: .3s;
+  transition: .3s;
+  cursor: pointer;
+}
+
+.chat:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+@media (max-width: 650px) {
+  .chat {
+    width: 40px;
+  }
+}
+
+.nav1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 980px) {
+  .nav1 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media (max-width: 980px) {
+  .nav1__item {
+    margin-bottom: 5px;
+  }
+}
+
+.nav1__link {
+  margin-right: 20px;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.nav1__link:hover {
+  color: #1C6FA6;
+  border-bottom: 1px solid #1C6FA6;
+}
+
+.responses {
+  margin: 100px 15%;
+  font-size: 16px;
+}
+
+@media (max-width: 1280px) {
+  .responses {
+    margin: 70px 8%;
+  }
+}
+
+@media (max-width: 980px) {
+  .responses {
+    margin: 40px 5%;
+    font-size: 14px;
+  }
+}
+
+.responses__title {
+  font-weight: 700;
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.responses__info {
+  line-height: 1.5;
+  text-indent: 1.5em;
+  margin-bottom: 15px;
+}
+
+.responses__list {
+  margin-top: 50px;
+}
+
+.responses__item {
+  -webkit-box-shadow: 0px 0px 10px #1C6FA6;
+          box-shadow: 0px 0px 10px #1C6FA6;
+  padding: 20px 40px;
+  border-radius: 25px;
+  position: relative;
+  margin-bottom: 15px;
+}
+
+.responses__name {
+  font-size: 18px;
+  color: #1C6FA6;
+  margin-bottom: 10px;
+}
+
+.responses__date {
+  font-size: 14px;
+  color: #525252;
+  letter-spacing: 2px;
+  position: absolute;
+  right: 30px;
+  top: 10px;
+}
+
+#menu__toggle {
+  opacity: 0;
+}
+
+#menu__toggle:checked ~ .menu__btn > span {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  -webkit-transform: rotate(0);
+          transform: rotate(0);
+}
+
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+#menu__toggle:checked ~ .nav {
+  visibility: visible;
+  left: 0;
+}
+
+.burger__nav {
+  visibility: hidden;
+  -webkit-transition: .3s;
+  transition: .3s;
+  display: block;
+  position: absolute;
+  z-index: 1;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+  width: 300px;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  background-color: #f5f5f5;
+  -webkit-box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+          box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+  -webkit-transition-duration: .25s;
+          transition-duration: .25s;
+}
+
+.menu__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  visibility: hidden;
+  width: 30px;
+  height: 2px;
+  z-index: 1;
+  background-color: #616161;
+  -webkit-transition-duration: .25s;
+          transition-duration: .25s;
+}
+
+@media (max-width: 980px) {
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    visibility: visible;
+  }
+}
+
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+
+.nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 980px) {
+  .nav {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    background-color: #f5f5f5;
+    -webkit-box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+            box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+    -webkit-transition-duration: .25s;
+            transition-duration: .25s;
+  }
+}
+
+.nav__link {
+  margin-right: 20px;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+@media (max-width: 980px) {
+  .nav__link {
+    display: block;
+    padding: 12px 24px;
+    color: #333;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    -webkit-transition-duration: .25s;
+            transition-duration: .25s;
+  }
+}
+
+.nav__link:hover {
+  color: #1C6FA6;
+  border-bottom: 1px solid #1C6FA6;
+}
+
+@media (max-width: 980px) {
+  .nav__link:hover {
+    background-color: #CFD8DC;
+  }
 }
