--- a/scss/modules/_currency-line.scss
+++ b/scss/modules/_currency-line.scss
@@ -2,12 +2,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f5f5f5;
-  box-shadow: 0px 0px 10px #1C6FA6;
+  background-color: $light-grey-color;
+  box-shadow: 0px 0px 10px $blue-color;
   position: relative;
 
   &__text {
     margin: 25px 30px 25px;
-    color: #525252;
+    color: $grey-color;
+
+    @media (max-width: 1080px) {
+      font-size: 14px;
+    }
+
+    @media (max-width: 700px) {
+      margin: 10px 9px;
+    }
   }  
 }
