--- a/scss/modules/_currency.scss
+++ b/scss/modules/_currency.scss
@@ -1,12 +1,36 @@
 .container {
   display: flex;
   justify-content: space-between;
+
+  @media (max-width: 980px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .currency {
   width: 450px;
   padding: 30px 0 0 100px;
-  box-shadow: 0px 0px 10px #1C6FA6;
+  box-shadow: 0px 0px 10px $blue-color;
+
+  @media (max-width: 1730px) {
+    padding: 20px 0 0 20px;
+    width: 350px;
+  }
+
+  @media (max-width: 1080px) {
+    padding: 20px 0 0 20px;
+    width: 350px;
+    font-size: 14px;
+  }
+
+  @media (max-width: 980px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 20px;
+  }
 
   &__title {
     font-size: 36px;
@@ -20,11 +44,19 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+
+    @media (max-width: 980px) {
+      margin-right: 30px;
+    }
   }  
 
   &__icon {
     margin-right: 10px;
     width: 30px;
+
+    @media (max-width: 980px) {
+      width: 20px;
+    }
   }
 
   &__code{
@@ -33,9 +65,9 @@
   }
 
   &__button {
-    background-color: white;
-    border: 1px solid #1C6FA6;
-    color: black;
+    background-color: $white-color;
+    border: 1px solid $blue-color;
+    color: $black-color;
     width: 60px;
     padding: 3px 0px;
     text-align: center;
@@ -45,13 +77,13 @@
     cursor: pointer;
 
     &--pressed{
-      background-color: #1C6FA6;
-      color: white;
+      background-color: $blue-color;
+      color: $white-color;
     }
 
     &:hover {
-      background-color: #1C6FA6;
-      color: white;
+      background-color: $blue-color;
+      color: $white-color;
     }
   }
 }
