--- a/scss/modules/_form.scss
+++ b/scss/modules/_form.scss
@@ -7,11 +7,11 @@ select {
   box-shadow:none;
   border:0!important;
   border-radius: 20px;
-  background: white;
+  background: $white-color;
   background-image: none;
   flex: 1;
   padding: 0 .5em;
-  color:black;
+  color: $black-color;
   cursor:pointer;
   font-size: 1em;
   font-family: 'Open Sans', sans-serif;
@@ -29,18 +29,22 @@ select {
   line-height: 3;
   overflow: hidden;
   border-radius: 20px;
-  border: 1px solid #1C6FA6;
+  border: 1px solid $blue-color;
+
+  @media (max-width: 450px) {
+    width: calc(50% - 18px);
+  }
 
   &::after {
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    color: #1C6FA6;
+    color: $blue-color;
     content: '\25BC';
     position: absolute;
     top: 0;
     right: 0;
     padding: 0 1em;
-    background: white;
+    background: $white-color;
     cursor:pointer;
     pointer-events:none;
     transition:.25s all ease;
@@ -49,7 +53,17 @@ select {
 
 .form {
   margin-top: 50px;
-  width: 800px;
+  width: 780px;
+  padding: 20px;
+  font-size: 18px;
+
+  @media (max-width: 1080px) {
+    font-size: 14px;
+  }
+
+  @media (max-width: 800px) {
+    width: 100%;
+  }
 
   &__convert {
     display: flex;
@@ -59,6 +73,11 @@ select {
   &__equel {
     margin: 0 20px;
     font-size: 22px;
+
+    @media (max-width: 450px) {
+      font-size: 16px;
+      margin: 0 10px;
+    }
   }
 
   &__card {
@@ -69,24 +88,24 @@ select {
     &-icon {
       width: 37px;
       margin-right: 30px;
+
+      @media (max-width: 980px) {
+        width: 28px;
+        margin-right: 15px;
+      }
     }
 
     &-input {
       width: 100%;
       padding: 0 20px;
       border-radius: 10px;
-      border: 1px solid #1C6FA6;
+      border: 1px solid $blue-color;
       height: 40px;
       font-size: 20px;
-    }
 
-    &-input {
-      width: 100%;
-      padding: 0 20px;
-      border-radius: 10px;
-      border: 1px solid #1C6FA6;
-      height: 40px;
-      font-size: 20px;
+      @media (max-width: 980px) {
+        font-size: 14px;
+      }
     }
   }
 
@@ -98,15 +117,24 @@ select {
     &-icon {
       width: 40px;
       margin-right: 30px;
+
+      @media (max-width: 980px) {
+        width: 30px;
+        margin-right: 15px;
+      }
     }
 
     &-input {
       width: 100%;
       padding: 0 20px;
       border-radius: 10px;
-      border: 1px solid #1C6FA6;
+      border: 1px solid $blue-color;
       height: 40px;
       font-size: 20px;
+
+      @media (max-width: 980px) {
+        font-size: 14px;
+      }
     }
   }
 
@@ -119,14 +147,31 @@ select {
     border: 0px;
     font-size: 24px;
     font-weight: 700;
-    color: white;
+    color: $white-color;
     display: flex;
-    background: rgb(119,81,163);
-    background: linear-gradient(87deg, rgba(119,81,163,1) 0%, rgba(97,136,235,1) 69%); 
+    transition: .3s;
+    background: $gradient-purple-color;
+    background: linear-gradient(87deg, $gradient-purple-color 0%, $gradient-blue-color 69%); 
+
+    @media (max-width: 980px) {
+      font-size: 18px;
+      padding: 8px 30px 8px 6px;
+      height: 40px;
+      margin-left: 10px;
+    }
+    
+    &:hover {
+      transform: scale(1.03);
+    }
 
     &-img {
       width: 15px;
       margin-right: 8px;
+
+      @media (max-width: 980px) {
+        width: 13px;
+        margin-left: 5px;
+      }
     }
   }
 
@@ -140,14 +185,18 @@ select {
       width: 100%;
       padding: 0 20px;
       border-radius: 10px;
-      border: 1px solid #1C6FA6;
+      border: 1px solid $blue-color;
       height: 40px;
       font-size: 20px;
+
+      @media (max-width: 980px) {
+        font-size: 14px;
+      }
     }
   }
 
   &__caution {
-    border: 1px solid orange;
+    border: 1px solid $orange-color;
     padding: 15px;
   }
 }
@@ -156,7 +205,6 @@ select {
   width: 100%;
   display: flex;
   align-items: center;
-  font-size: 18px;
   margin-top: 30px;
   line-height: 1.5;
 }
@@ -164,4 +212,8 @@ select {
 .form__caution-img, .form__message-img, .form__wait-img, .form__info-img  {
   width: 40px;
   margin-right: 20px;
+
+  @media (max-width: 1080px) {
+    width: 25px;
+  }
 }
