--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -3,26 +3,34 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 30px 70px;
-}
+  // position: relative;
+  height: 150px;
 
-.nav {
-  display: flex;
+  @media (max-width: 1350px) {
+    padding: 30px 40px;
+  }
 
-  &__link {
-    margin-right: 20px;
-    transition: .3s;
-
-    &:hover {
-      color: #1C6FA6;
-      border-bottom: 1px solid #1C6FA6;
-    }
+  @media (max-width: 1080px) {
+    padding: 30px 20px;
+    height: 100px;
+    font-size: 14px;
   }
 }
+
 
 .logo {
   display: flex;
   width: 120px;
   transition: .3s;
+  position: absolute;
+  left: calc(50% - 60px);
+  top: 12px;
+
+  @media (max-width: 1080px) {
+    width: 90px;
+    left: calc(50% - 45px);
+    top: 4px;
+  }
 }
 
 .contacts {
@@ -30,14 +38,23 @@ header {
 
   &__item {
     margin-right: 20px;
+    @media (max-width: 500px) {
+      margin-right: 5px;
+    }
+
+    &-chat{
+      @media (max-width: 730px) {
+        visibility: hidden;
+      }
+    }
   }
 
   &__link{
     transition: .3s;
 
     &:hover {
-      color: #1C6FA6;
-      border-bottom: 1px solid #1C6FA6;
+      color: $blue-color;
+      border-bottom: 1px solid $blue-color;
     }
   }
 
@@ -45,3 +62,4 @@ header {
     width: 20px;
   }
 }
+
