--- a/scss/modules/_transaction.scss
+++ b/scss/modules/_transaction.scss
@@ -1,7 +1,7 @@
 .transaction {
   width: 100%;
   padding: 20px 20px;
-  box-shadow: 0px 0px 10px #1C6FA6;
+  box-shadow: 0px 0px 10px $blue-color;
   margin-top: 50px;
 
   &__line{
@@ -23,6 +23,10 @@
   &__title {
     font-size: 36px;
     text-align: center;
+
+    @media (max-width: 650px) {
+      font-size: 24px;
+    }
   }
 
   &__info-sell {
@@ -30,6 +34,26 @@
     display: flex;
     align-items: center;
     left: 35%;
+
+    @media (max-width: 1500px) {
+      left: 42.5%;
+    }
+
+    @media (max-width: 1270px) {
+      left: 50%;
+    }
+
+    @media (max-width: 980px) {
+      left: 35%;
+    }
+
+    @media (max-width: 650px) {
+      left: 42.5%;
+    }
+
+    @media (max-width: 550px) {
+      left: 55%;
+    }
   }
 
   &__info-buy {
@@ -46,28 +70,61 @@
 
   &__text {
     margin-right: 20px;
+
+    @media (max-width: 700px) {
+      margin-right: 10px;
+    }
   }
 
   &__date {
     position: absolute;
     left: 70%;
+
+    @media (max-width: 1500px) {
+      left: 85%;
+    }
+
+    @media (max-width: 1270px) {
+      display: none;
+    }
+
+    @media (max-width: 980px ) {
+      left: 70%;
+      display: block;
+    }
+
+    @media (max-width: 650px) {
+      display: none;
+    }
   }
 
   &__state {
     position: absolute;
     left: 85%;
 
+    @media (max-width: 1500px) {
+      display: none;
+    }
+
+    @media (max-width: 980px) {
+      left: 85%;
+      display: block;
+    }
+
+    @media (max-width: 550px) {
+      display: none;
+    }
+
     &--done {
-      color: green;
+      color: $green-color;
     }
 
     &--fail {
-      color: red;
+      color: $red-color;
     }
 
     &--pending {
-      color: orange;
+      color: $orange-color;
     }
-    
   }
 }
