--- a/scss/modules/_currency-line.scss
+++ b/scss/modules/_currency-line.scss
@@ -17,5 +17,10 @@
     @media (max-width: 700px) {
       margin: 10px 9px;
     }
+
+    @media (max-width: 480px) {
+      margin: 10px 9px;
+      font-size: 10px;
+    }
   }  
 }
