--- a/scss/modules/_currency.scss
+++ b/scss/modules/_currency.scss
@@ -25,7 +25,7 @@
   }
 
   @media (max-width: 980px) {
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     width: 100%;
