--- a/scss/modules/_form.scss
+++ b/scss/modules/_form.scss
@@ -65,6 +65,11 @@ select {
     width: 100%;
   }
 
+  @media (max-width: 450px) {
+    padding: 20px 10px;
+  }
+
+
   &__convert {
     display: flex;
     align-items: center;
