--- a/scss/modules/_transaction.scss
+++ b/scss/modules/_transaction.scss
@@ -4,6 +4,11 @@
   box-shadow: 0px 0px 10px $blue-color;
   margin-top: 50px;
 
+  @media (max-width: 500px) {
+    padding: 20px 0px;
+    box-shadow: 0px 0px 0px $blue-color;
+  }
+
   &__line{
     width: 100%;
   }
@@ -30,42 +35,64 @@
   }
 
   &__info-sell {
-    position: absolute;
     display: flex;
     align-items: center;
-    left: 35%;
+    width: 35%;
 
     @media (max-width: 1500px) {
-      left: 42.5%;
+      width: 42.5%;
     }
 
     @media (max-width: 1270px) {
-      left: 50%;
+      width: 50%;
     }
 
     @media (max-width: 980px) {
-      left: 35%;
+      width: 35%;
     }
 
     @media (max-width: 650px) {
-      left: 42.5%;
+      width: 42.5%;
     }
 
     @media (max-width: 550px) {
-      left: 55%;
+      width: 55%;
     }
   }
 
   &__info-buy {
-    position: absolute;
     display: flex;
     align-items: center;
-    left: 0;
+    width: 35%;
+
+    @media (max-width: 1500px) {
+      width: 42.5%;
+    }
+
+    @media (max-width: 1270px) {
+      width: 50%;
+    }
+
+    @media (max-width: 980px) {
+      width: 35%;
+    }
+
+    @media (max-width: 650px) {
+      width: 42.5%;
+    }
+
+    @media (max-width: 550px) {
+      width: 55%;
+    }
   }
 
   &__icon {
     width: 25px;
     margin-right: 15px;
+
+    @media (max-width: 420px) {
+      margin-right: 0px;
+    }
   }
 
   &__text {
@@ -77,11 +104,10 @@
   }
 
   &__date {
-    position: absolute;
-    left: 70%;
+    width: 15%;
 
     @media (max-width: 1500px) {
-      left: 85%;
+      width: 7.5%;
     }
 
     @media (max-width: 1270px) {
@@ -89,7 +115,7 @@
     }
 
     @media (max-width: 980px ) {
-      left: 70%;
+      width: 15%;
       display: block;
     }
 
@@ -99,15 +125,14 @@
   }
 
   &__state {
-    position: absolute;
-    left: 85%;
+    width: 15%;
 
     @media (max-width: 1500px) {
       display: none;
     }
 
     @media (max-width: 980px) {
-      left: 85%;
+      width: 15%;
       display: block;
     }
 
