--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,4 +13,5 @@
 @import "modules/_transaction";
 @import "modules/_footer";
 @import "modules/_responses";
-@import "modules/_burger.scss"
+@import "modules/_burger.scss";
+@import "modules/dropdown";
