--- a/css/styles.css
+++ b/css/styles.css
@@ -316,41 +316,6 @@ select::-ms-expand {
   display: none;
 }
 
-.select {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: calc(50% - 31px);
-  height: 3em;
-  line-height: 3;
-  overflow: hidden;
-  border-radius: 20px;
-  border: 1px solid #1C6FA6;
-}
-
-@media (max-width: 450px) {
-  .select {
-    width: calc(50% - 18px);
-  }
-}
-
-.select::after {
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  color: #1C6FA6;
-  content: '\25BC';
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 0 1em;
-  background: white;
-  cursor: pointer;
-  pointer-events: none;
-  -webkit-transition: .25s all ease;
-  transition: .25s all ease;
-}
-
 .form {
   margin-top: 50px;
   width: 780px;
@@ -1068,4 +1033,176 @@ select::-ms-expand {
   .nav__link:hover {
     background-color: #CFD8DC;
   }
+}
+
+details {
+  position: relative;
+  margin-right: 1rem;
+  width: calc(50% - 31px);
+}
+
+@media (max-width: 450px) {
+  details {
+    width: calc(50% - 18px);
+  }
+}
+
+details[open] {
+  z-index: 1;
+}
+
+summary {
+  padding: 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: white;
+  border-radius: 25px;
+  border: 1px solid #1C6FA6;
+  list-style: none;
+}
+
+summary::-webkit-details-marker {
+  display: none;
+}
+
+details[open] summary:before {
+  content: '';
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  background: transparent;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+summary:after {
+  content: '';
+  display: inline-block;
+  float: right;
+  width: .5rem;
+  height: .5rem;
+  border-bottom: 1px solid currentColor;
+  border-left: 1px solid currentColor;
+  border-bottom-left-radius: 2px;
+  -webkit-transform: rotate(45deg) translate(50%, 0%);
+          transform: rotate(45deg) translate(50%, 0%);
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
+  -webkit-transition: -webkit-transform ease-in-out 100ms;
+  transition: -webkit-transform ease-in-out 100ms;
+  transition: transform ease-in-out 100ms;
+  transition: transform ease-in-out 100ms, -webkit-transform ease-in-out 100ms;
+}
+
+summary:focus {
+  outline: none;
+}
+
+details[open] summary:after {
+  -webkit-transform: rotate(-45deg) translate(0%, 0%);
+          transform: rotate(-45deg) translate(0%, 0%);
+}
+
+details ul {
+  width: 100%;
+  background: white;
+  position: absolute;
+  top: calc(100% + .5rem);
+  left: 0;
+  padding: 1rem 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 5px;
+  max-height: 375px;
+  overflow-y: auto;
+  border: 1px solid #1C6FA6;
+}
+
+@media (max-width: 450px) {
+  details ul {
+    width: 300px;
+  }
+}
+
+@media (max-width: 450px) {
+  details ul.list-right {
+    left: -160px;
+  }
+}
+
+details li {
+  margin: 0;
+  padding: 1rem 0;
+  border-bottom: 1px solid #1C6FA6;
+}
+
+details li:first-child {
+  padding-top: 0;
+}
+
+details li:last-child {
+  padding-bottom: 0;
+  border-bottom: none;
+}
+
+/* FAKE SELECT */
+summary.radios {
+  counter-reset: radios;
+}
+
+summary.radios:before {
+  content: var(--selection);
+}
+
+input[type=radio] {
+  counter-increment: radios;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  display: none;
+}
+
+input[type=radio]:checked {
+  display: inline;
+  --display: block;
+}
+
+input[type=radio]:after {
+  content: attr(title);
+  display: inline;
+  font-size: 1rem;
+}
+
+details ul.list {
+  counter-reset: labels;
+}
+
+details label {
+  padding: 0 15px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+}
+
+details label span {
+  --display: none;
+  display: var(--display);
+  width: 1rem;
+  height: 1rem;
+  border: 1px solid #727272;
+  border-radius: 3px;
+}
+
+details .currency__code {
+  font-weight: 400;
 }
