--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -10,13 +10,21 @@
   @media (max-width: 980px) {
     padding: 20px 0;
   }
+
+  &__container {
+    display: flex;
+
+    @media (max-width: 980px) {
+      margin-bottom: 15px;
+    }
+  }
 }
 
 .chat {
-  position: absolute;
+  position: fixed;
   width: 60px;
-  right: 5%;
-  top: calc(50% - 30px);
+  right: 39px;
+  bottom: calc(30px);
   transition: .3s;
   cursor: pointer;
 
@@ -31,6 +39,7 @@
 
 .nav1 {
   display: flex;
+  align-items: center;
 
   @media (max-width: 980px) {
     flex-direction: column;
@@ -45,6 +54,11 @@
   &__link {
     margin-right: 20px;
     transition: .3s;
+
+    @media (max-width: 980px) {
+      color: $grey-color;
+      letter-spacing: 2px;
+    }
 
     &:hover {
       color: $blue-color;
